turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:13: error: ')' expected but ';' found.
		case R => if(x==colors.length - 1){x=0}else{x=x+1};setCouleurBrosse(colors(place(x)); baisseBrosse(); leveBrosse(); droite();avance()
                                                                                                    ^LangtonsAnt:14: error: ')' expected but ';' found.
		case L => if(x==colors.length - 1){x=0}else{x=x+1};setCouleurBrosse(colors(place(x)); baisseBrosse(); leveBrosse(); gauche();avance()
                                                                                                    ^LangtonsAnt:16: error: ')' expected but '}' found.
}
^